# bootstrap-flask

./: .flake8  .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Pipfile  README.md  TODO.md  docs_requirements.txt  pyproject.toml  setup.cfg  setup.py  test_bootstrap_flask.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: build.yml  master_bootstrap-flask-example.yml  release.yml
docs/: Makefile  advanced.rst  api.rst  basic.rst  conf.py  examples.rst  index.rst  macros.rst  make.bat  migrate.rst
docs/_templates/: sidebarintro.html
docs/_themes/: README  flask_theme_support.py
examples/: README.rst  app.py  generate.py  list-bootswatch.py  list_bootswatch.py  requirements.txt  update-icons.py  update_icons.py
examples/bootstrap4/: README.rst  app.py
examples/bootstrap5/: app.py
examples/templates/: base.html  flash.html  form.html  icon.html  index.html  nav.html  pagination.html  static.html  table.html  utils.html
flask_bootstrap/: __init__.py
requirements/: build.in  build.txt  dev.in  dev.txt  docs.in  docs.txt  examples.in  examples.txt  style.txt  tests.in  tests.txt
tests/: conftest.py  test_bootstrap.py  test_bootstrap5.py  test_render.py  test_render_breadcrumb_item.py  test_render_field.py  test_render_form.py  test_render_form_row.py  test_render_hidden_errors.py  test_render_icon.py  test_render_messages.py  test_render_nav_item.py  test_render_pager.py  test_render_pagination.py  test_render_table.py  test_themes.py
tests/macros/: test_render_form_row.py  test_render_nav_item.py  test_render_pager.py
tests/test_boostrap5/: test_bootstrap5.py  test_render_form.py  test_render_messages.py  test_themes.py
tests/test_bootstrap4/: conftest.py  test_bootstrap.py  test_render_breadcrumb_item.py  test_render_field.py  test_render_form.py  test_render_form_row.py  test_render_hidden_errors.py  test_render_icon.py  test_render_icon_font.py  test_render_messages.py  test_render_nav_item.py  test_render_pager.py  test_render_pagination.py  test_render_sortlink.py  test_render_table.py  test_themes.py
tests/test_bootstrap5/: conftest.py  test_bootstrap5.py  (+5 more)
(+46 files in other folders)
