[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[coverage:run]
source = flask_bootstrap

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError:

[flake8]
exclude = static,.git,*migrations*,build,.tox,docs
max-line-length = 119
max-complexity = 7

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
